<resources>
    <string name="app_name">K22411CSampleProject</string>
    <string name="title_login_user_name">User name:</string>
    <string name="title_login_user_name_hint">Enter your user name</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_password_hint">Enter your password</string>
    <string name="title_login_save_login_infor">Save login information</string>
    <string name="title_login_button_login">Login</string>
    <string name="confirm_exit_title">Exit confirmation</string>
    <string name="confirm_exit_message">Are you sure you want to exit?</string>
    <string name="confirm_exit_yes">YES</string>
    <string name="confirm_exit_no">NO</string>
    <string name="title_employee">Employee</string>
    <string name="title_customer">Customer</string>
    <string name="txtEmployeeHealthcare">Health Care</string>
    <string name="txtEmployeeSalary">Salary</string>
    <string name="txtSalary" />
    <string name="titile_employee_healthcare">Employee Healthcare</string>
    <string name="title_height">Height</string>
    <string name="title_weight">Weight:</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_employee_salary">Salary</string>
    <string name="title_slim">Slim</string>
    <string name="title_normal">Normal</string>
    <string name="title_fat">Fat</string>
    <string name="title_leave">Leave</string>
    <string name="title_benefits">Benefits</string>
    <string name="title_advanced_product">Advanced Product</string>
    <string name="title_product">Product</string>
    <string name="title_category">Category</string>
    <string name="title_new_customer">New Customer</string>
    <string name="title_broadcast_advertising">Broadcast Advertising</string>
    <string name="title_help">Help</string>
    <string name="title_customer_detail">Customer Details</string>
    <string name="title_customer_id">Customer ID:</string>
    <string name="title_customer_name">Customer name:</string>
    <string name="title_customer_email">Customer email:</string>
    <string name="title_customer_phone">Customer phone:</string>
    <string name="title_new_button" />
    <string name="title_button_new">New</string>
    <string name="title_button_save">Save</string>
    <string name="title_button_remove">Remove</string>
    <string name="title_payment_method">Payment Method</string>
    <string name="title_order">Order</string>
    <string name="title_telephony">Telephony</string>
    <string name="title_contact_name">Contact Name:</string>
    <string name="title_phone_number">Phone Number:</string>
    <string name="title_body">Body:</string>
</resources>