<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8efde"
    android:orientation="vertical"
    android:padding="16dp" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TableLayout
            android:stretchColumns="*"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:onClick="open_employee_healthcare_activity"
                        android:id="@+id/imgEmployeeHealthcare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_doctor" />

                    <TextView
                        android:id="@+id/txtEmployeeHealthcare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#EFE4A2"
                        android:onClick="open_employee_healthcare_activity"
                        android:text="@string/titile_employee_healthcare"
                        android:textAlignment="center" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgSalary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_salary" />

                    <TextView
                        android:id="@+id/txtEmployeeSalary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#EFE4A2"
                        android:text="@string/title_employee_salary"
                        android:textAlignment="center" />
                </LinearLayout>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Section for Employee Benefits -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgEmployeeBenefits"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_benefits" />

                    <TextView
                        android:id="@+id/txtEmployeeBenefits"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#EFE4A2"
                        android:text="@string/title_leave"
                        android:textAlignment="center" />
                </LinearLayout>

                <!-- Section for Employee Leave -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgEmployeeLeave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_leave" />

                    <TextView
                        android:id="@+id/txtEmployeeLeave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#EFE4A2"
                        android:text="@string/title_benefits"
                        android:textAlignment="center" />
                </LinearLayout>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:onClick="open_employee_healthcare_activity"
                        android:id="@+id/imgEmployeeHealthcare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_doctor" />

                    <TextView
                        android:id="@+id/txtEmployeeHealthcare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#EFE4A2"
                        android:onClick="open_employee_healthcare_activity"
                        android:text="@string/titile_employee_healthcare"
                        android:textAlignment="center" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgSalary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_salary" />

                    <TextView
                        android:id="@+id/txtEmployeeSalary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#EFE4A2"
                        android:text="@string/title_employee_salary"
                        android:textAlignment="center" />
                </LinearLayout>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Section for Employee Benefits -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgEmployeeBenefits"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_benefits" />

                    <TextView
                        android:id="@+id/txtEmployeeBenefits"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#EFE4A2"
                        android:text="@string/title_leave"
                        android:textAlignment="center" />
                </LinearLayout>

                <!-- Section for Employee Leave -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgEmployeeLeave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_leave" />

                    <TextView
                        android:id="@+id/txtEmployeeLeave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#EFE4A2"
                        android:text="@string/title_benefits"
                        android:textAlignment="center" />
                </LinearLayout>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:onClick="open_employee_healthcare_activity"
                        android:id="@+id/imgEmployeeHealthcare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_doctor" />

                    <TextView
                        android:id="@+id/txtEmployeeHealthcare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#EFE4A2"
                        android:onClick="open_employee_healthcare_activity"
                        android:text="@string/titile_employee_healthcare"
                        android:textAlignment="center" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgSalary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_salary" />

                    <TextView
                        android:id="@+id/txtEmployeeSalary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#EFE4A2"
                        android:text="@string/title_employee_salary"
                        android:textAlignment="center" />
                </LinearLayout>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:onClick="open_employee_healthcare_activity"
                        android:id="@+id/imgEmployeeHealthcare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_doctor" />

                    <TextView
                        android:id="@+id/txtEmployeeHealthcare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#EFE4A2"
                        android:onClick="open_employee_healthcare_activity"
                        android:text="@string/titile_employee_healthcare"
                        android:textAlignment="center" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgSalary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_salary" />

                    <TextView
                        android:id="@+id/txtEmployeeSalary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#EFE4A2"
                        android:text="@string/title_employee_salary"
                        android:textAlignment="center" />
                </LinearLayout>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableLayout>
    </LinearLayout>
</ScrollView>